<resources>
    <string name="app_name">Tax</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="information">High Score</string>
    <string name="sound_on">Sound ON</string>
    <string name="sound_off">Sound OFF</string>
    <string name="music_on">Vibration ON</string>
    <string name="music_off">Vibration OFF</string>
</resources>
